# ocx-2024-rust-wasm-frontend

./: Cargo.toml  README.md  assets.odg  frameworks.txt  index.html  rust-toolchain.toml
.github/workflows/: publish.yaml
src/: app.rs  main.rs
src/component/: embed.rs  image.rs  markdown.rs  mod.rs  normal.rs  safe_html.rs  section.rs  slides.rs  title.rs
src/talk/: mod.rs  shout_out.md  who_am_i.md
static/: benchmarks1.html
style/: base.scss  fonts.scss  main.scss  panic.scss
