[package]
name = "ocx-rust-wasm"
description = "Rusty Frontends!"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
browser-panic-hook = "0.2.0"
comrak = "0.29"
console_log = "1"
gloo-utils = "0.2"
log = "0.4.22"
wasm-bindgen = "0.2"
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3.2"
yew-more-hooks = "0.3.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
]

# release profile settings to reduce the final binary size
[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's'
lto = true
